add last interval

--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,5 @@ Im going to use 'pf' as a prefix for all the main color
     --pf-red: #F43F5E;
     --pf-sub-green: #F0FDF4;
     --pf-sub-red: #881337;
+    --pf-light-gray: #F8FAFC;
 }
