add base card component

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,6 @@ Im going to use 'pf' as a prefix for all the main color
     --pf-sub-green: #F0FDF4;
     --pf-sub-red: #881337;
     --pf-light-gray: #F8FAFC;
+    --pf-purple: #7E22CE;
+    --pf-white: #E2E8F0;
 }
