--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ Im going to use 'pf' as a prefix for all the main color
     --pf-light-gray: #F8FAFC;
     --pf-purple: #7E22CE;
     --pf-white: #E2E8F0;
+    --pf-pink: #FDA4AF;
 }
 
 body {
