--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ Im going to use 'pf' as a prefix for all the main color
     --pf-purple: #7E22CE;
     --pf-white: #E2E8F0;
     --pf-pink: #FDA4AF;
+    --pf-pure-white: white;
 }
 
 body {
