--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,6 +11,7 @@
     width: 500px;
     height: 100%;
     background-color: white;
+    box-shadow: -2px 0 15px rgba(0, 0, 0, 0.1), -2px 0 6px rgba(0, 0, 0, 0.06);
     transition: right 0.3s ease;
     padding: 20px;
     box-sizing: border-box;
